# project_ir

./: .env.example  .gitignore  AGENTS.md  README.md  TOOLS.md  docker-compose.yml  package.json  pyproject.toml
.openclaw/: workspace-state.json
baseline/: rag_with_elasticsearch.py
docs/: IR_MASTER_PROMPT.md
ir_search/: __init__.py  chunking.py  cli.py  indexer.py  rag.py  schema.py  snapshot.py  streams.py  swarm_routes.py  tokenize.py
openclaw/: openclaw.json.example  openclaw.json.last-good  openclaw.json5.tpl
scripts/: Dockerfile.envsubst  bootstrap_aiir_core.py  ollama_candidate_judge.py  patch_submission.py  render_openclaw_config.py  residual_candidate_miner.py  run_openclaw.py  submission_diff_report.py  submission_doc_audit.py  submission_patch_candidates.py  topic_error_candidates.py  validate_submission.py  vpn-down.sh  vpn-up.sh
submissions/: answer_span_audit_20260526.json  answer_span_audit_round2_20260526.json  answer_span_strict_quote_audit_20260526.json  fault_candidate_audit_20260526.json  fault_candidate_lenient_audit_20260526.json  gemma4_best_plus_rank2_topicdrift_20260523_eval81.jsonl  gemma4_e4b_e5_w050_c30_20260522.jsonl  gemma4_e4b_targeted_eval23_84_86_250_302_20260522.jsonl  gemma4_e4b_targeted_eval23_84_86_250_302_308_20260522.jsonl  granite4_1_8b_c30_w060_w050_safe_20260522.jsonl  granite_direct_answer_audit_20260526.json  highrisk_rank_remote_audit2_20260526.json  highrisk_rank_today_audit_20260527.json  leaderboard_record_2026-05-22.md  leaderboard_record_2026-05-23.md  leaderboard_record_2026-05-30.md  (+6 more)
tests/: test_chunking.py  (+12 more)
(+36 files in other folders)
